<?xml version="1.0" encoding="utf-8"?>
<RelativeLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    tools:context=".activity.LoginActivity"
    android:background="@color/colorPrimaryDark">

    <ScrollView
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_marginBottom="50dp">


        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:orientation="vertical"
            android:padding="10dp">
            <ImageView
                android:id="@+id/imgLogo"
                android:layout_width="wrap_content"
                android:layout_height="87dp"
                android:layout_marginHorizontal="55dp"
                android:src="@drawable/text_logo_deeporange" />
    <androidx.cardview.widget.CardView
        android:layout_width="match_parent"
        android:layout_marginHorizontal="5dp"
        android:layout_height="wrap_content"
        android:layout_marginTop="5dp"
        app:cardCornerRadius="25dp">
        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="match_parent"
            android:background="#fff"
            android:orientation="vertical">
            <TextView
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:text="@string/what_restaurents"
                android:fontFamily="@font/roboto"
                android:textSize="18sp"
                android:layout_margin="10dp"
                android:textColor="@color/color_question"
                android:padding="5dp" />
            <TextView
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:textSize="14sp"
                android:textColor="@color/color_ans"
                android:text="@string/rev_restaurent"
                android:layout_marginLeft="10dp"
                android:fontFamily="@font/roboto"
                android:layout_marginRight="10dp"
                android:layout_marginBottom="10dp"
                android:padding="5dp"/>
        </LinearLayout>

    </androidx.cardview.widget.CardView>
            <androidx.cardview.widget.CardView
                android:layout_width="match_parent"
                android:layout_marginHorizontal="5dp"
                android:layout_height="wrap_content"
                android:layout_marginTop="10dp"
                app:cardCornerRadius="25dp">
                <LinearLayout
                    android:layout_width="match_parent"
                    android:layout_height="match_parent"
                    android:background="#fff"
                    android:orientation="vertical">
                    <TextView
                        android:layout_width="wrap_content"
                        android:layout_height="wrap_content"
                        android:text="@string/q1"
                        android:fontFamily="@font/roboto"
                        android:textSize="18sp"
                        android:layout_margin="10dp"
                        android:textColor="@color/color_question"
                        android:padding="5dp" />
                    <TextView
                        android:layout_width="wrap_content"
                        android:layout_height="wrap_content"
                        android:textSize="14sp"
                        android:textColor="@color/color_ans"
                        android:text="@string/ans_q2"
                        android:layout_marginLeft="10dp"
                        android:fontFamily="@font/roboto"
                        android:layout_marginRight="10dp"
                        android:layout_marginBottom="10dp"
                        android:padding="5dp"/>
                </LinearLayout>

            </androidx.cardview.widget.CardView>
            <androidx.cardview.widget.CardView
                android:layout_width="match_parent"
                android:layout_marginHorizontal="5dp"
                android:layout_height="wrap_content"
                android:layout_marginTop="10dp"
                app:cardCornerRadius="25dp">
                <LinearLayout
                    android:layout_width="match_parent"
                    android:layout_height="match_parent"
                    android:background="#fff"
                    android:orientation="vertical">
                    <TextView
                        android:layout_width="wrap_content"
                        android:layout_height="wrap_content"
                        android:text="@string/q2"
                        android:fontFamily="@font/roboto"
                        android:textSize="18sp"
                        android:layout_margin="10dp"
                        android:textColor="@color/color_question"
                        android:padding="5dp" />
                    <TextView
                        android:layout_width="wrap_content"
                        android:layout_height="wrap_content"
                        android:textSize="14sp"
                        android:textColor="@color/color_ans"
                        android:text="@string/ansq2"
                        android:layout_marginLeft="10dp"
                        android:fontFamily="@font/roboto"
                        android:layout_marginRight="10dp"
                        android:layout_marginBottom="10dp"
                        android:padding="5dp"
                        tools:ignore="HardcodedText" />
                </LinearLayout>

            </androidx.cardview.widget.CardView>
            <androidx.cardview.widget.CardView
                android:layout_width="match_parent"
                android:layout_marginHorizontal="5dp"
                android:layout_height="wrap_content"
                android:layout_marginTop="10dp"
                app:cardCornerRadius="25dp">
                <LinearLayout
                    android:layout_width="match_parent"
                    android:layout_height="match_parent"
                    android:background="#fff"
                    android:orientation="vertical">
                    <TextView
                        android:layout_width="wrap_content"
                        android:layout_height="wrap_content"
                        android:text="@string/q3"
                        android:fontFamily="@font/roboto"
                        android:textSize="18sp"
                        android:layout_margin="10dp"
                        android:textColor="@color/color_question"
                        android:padding="5dp" />
                    <TextView
                        android:layout_width="wrap_content"
                        android:layout_height="wrap_content"
                        android:textSize="14sp"
                        android:textColor="@color/color_ans"
                        android:text="@string/ans_q3"
                        android:layout_marginLeft="10dp"
                        android:fontFamily="@font/roboto"
                        android:layout_marginRight="10dp"
                        android:layout_marginBottom="10dp"
                        android:padding="5dp"
                        tools:ignore="HardcodedText" />
                </LinearLayout>

            </androidx.cardview.widget.CardView>
            <androidx.cardview.widget.CardView
                android:layout_width="match_parent"
                android:layout_marginHorizontal="5dp"
                android:layout_height="wrap_content"
                android:layout_marginTop="10dp"
                app:cardCornerRadius="25dp">
                <LinearLayout
                    android:layout_width="match_parent"
                    android:layout_height="match_parent"
                    android:background="#fff"
                    android:orientation="vertical">
                    <TextView
                        android:layout_width="wrap_content"
                        android:layout_height="wrap_content"
                        android:text="@string/q4"
                        android:fontFamily="@font/roboto"
                        android:textSize="18sp"
                        android:layout_margin="10dp"
                        android:textColor="@color/color_question"
                        android:padding="5dp" />
                    <TextView
                        android:layout_width="wrap_content"
                        android:layout_height="wrap_content"
                        android:textSize="14sp"
                        android:textColor="@color/color_ans"
                        android:text="@string/ans_q4"
                        android:layout_marginLeft="10dp"
                        android:fontFamily="@font/roboto"
                        android:layout_marginRight="10dp"
                        android:layout_marginBottom="10dp"
                        android:padding="5dp"
                        tools:ignore="HardcodedText" />
                </LinearLayout>

            </androidx.cardview.widget.CardView>


        </LinearLayout>
    </ScrollView>

</RelativeLayout>